# ai-playground

./: .gitignore  README.md  pyrightconfig.json  webscraper.py
webscraper/: .env.example  README.md  pyproject.toml  webscraper.py
