[project]
name = "ai-playground"
version = "0.1.0"
description = "A small project to play with different AI related stuff."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "anthropic>=0.51.0",
    "openai>=2.30.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "google-genai>=1.70.0",
]
